# basejump

./: .pre-commit-config.yaml  LICENSE  README.md  conftest.py  mypy.ini  pytest.ini
basejump-core/: pyproject.toml
basejump-demo/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
basejump-demo/alembic/: env.py
basejump-demo/basejump/demo/: __init__.py  crud.py  schemas.py  service.py  settings.py
tests/: test_chat.py  test_connection.py  test_main.py  test_result.py  test_table.py
