[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "basejump-demo"
version = "0.1.0"
description = "Demo to chat with your database"
authors = [{ name = "John Doe", email = "john@gmail.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "MIT"
dependencies = ["basejump-core>=0.30.1"]

[tool.hatch.build.targets.wheel]
packages = ["basejump"]
